--- a/views/categorias/index.ejs
+++ b/views/categorias/index.ejs
@@ -1,29 +1,31 @@
 <%- include('../header') %>
 
-<a class="btn btn-light" href="/categorias/nova">Nova Categoria</a><br />
-<a class="btn btn-light" href="/publicacoes/nova">Nova Publicação</a><br />
+<div class="container-fluid">
+    <a class="btn btn-light" href="/categorias/nova">Nova Categoria</a>
+    <a class="btn btn-light" href="/publicacoes/nova">Nova Publicação</a><br />
 
-<table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th scope="col">Categoria</th>
-            <th scope="col">Ações</th>
-        </tr>
-    </thead>
-    <tbody>
-    <% categorias.forEach(categoria => { %>
-        <tr>
-            <td>
-                <a href="/publicacoes/categoria/<%= categoria.id %>">
-                    <%= categoria.categoria %></td>
-                <a>
-            <td>
-                <a href="/categorias/editar/<%= categoria.id %>">Editar</a>
-                <a href="/categorias/excluir/<%= categoria.id %>">Excluir</a><br />
-            </td>
-        </tr>
-    <% }) %>
-    </tbody>
-</table>
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Categoria</th>
+                <th scope="col">Ações</th>
+            </tr>
+        </thead>
+        <tbody>
+        <% categorias.forEach(categoria => { %>
+            <tr>
+                <td>
+                    <a href="/publicacoes/categoria/<%= categoria.id %>">
+                        <%= categoria.categoria %>
+                    <a>
+                <td>
+                    <a href="/categorias/editar/<%= categoria.id %>">Editar</a>
+                    <a href="/categorias/excluir/<%= categoria.id %>">Excluir</a><br />
+                </td>
+            </tr>
+        <% }) %>
+        </tbody>
+    </table>
+</div>
 
 <%- include('../footer') %>
