--- a/views/categorias/nova.ejs
+++ b/views/categorias/nova.ejs
@@ -1,11 +1,13 @@
 <%- include('../header') %>
 
-<form method="POST" action="/categorias/nova">
-    <div class="form-group">
-        <label for="categoria">Categoria</label>
-        <input type="text" class="form-control" id="categoria" name="categoria" placeholder="Digite a categoria">
-    </div>
-    <button type="submit" class="btn btn-primary">Salvar</button>
-</form>
+<div class="container-fluid">
+    <form method="POST" action="/categorias/nova">
+        <div class="form-group">
+            <label for="categoria">Categoria</label>
+            <input type="text" class="form-control" id="categoria" name="categoria" placeholder="Digite a categoria">
+        </div>
+        <button type="submit" class="btn btn-primary">Salvar</button>
+    </form>
+</div>
 
 <%- include('../footer') %>
