--- a/views/publicacoes/editar.ejs
+++ b/views/publicacoes/editar.ejs
@@ -1,15 +1,17 @@
 <%- include('../header') %>
 
-<form method="POST" action="/publicacoes/editar/<%= categoria %>/<%= publicacao.id %>">
-    <div class="form-group">
-        <label for="titulo">Publicação</label>
-        <input type="text" class="form-control" id="titulo" name="titulo" placeholder="Digite o titulo" value="<%= publicacao.titulo %>">
-    </div>
-    <div class="form-group">
-        <label for="conteudo">Conteúdo</label>
-        <textarea class="form-control" id="conteudo" name="conteudo" placeholder="Digite o conteúdo"><%= publicacao.conteudo %></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary">Salvar</button>
-</form>
+<div class="container-fluid">
+    <form method="POST" action="/publicacoes/editar/<%= categoria %>/<%= publicacao.id %>">
+        <div class="form-group">
+            <label for="titulo">Publicação</label>
+            <input type="text" class="form-control" id="titulo" name="titulo" placeholder="Digite o titulo" value="<%= publicacao.titulo %>">
+        </div>
+        <div class="form-group">
+            <label for="conteudo">Conteúdo</label>
+            <textarea class="form-control" id="conteudo" name="conteudo" placeholder="Digite o conteúdo"><%= publicacao.conteudo %></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Salvar</button>
+    </form>
+</div>
 
 <%- include('../footer') %>
