--- a/views/publicacoes/index.ejs
+++ b/views/publicacoes/index.ejs
@@ -1,25 +1,27 @@
 <%- include('../header') %>
 
-<a class="btn btn-light" href="/publicacoes/nova">Nova Publicação</a><br />
+<div class="container-fluid">
+    <a class="btn btn-light" href="/publicacoes/nova">Nova Publicação</a><br />
 
-<table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th scope="col">Publicação</th>
-            <th scope="col">Ações</th>
-        </tr>
-    </thead>
-    <tbody>
-    <% publicacoes.forEach(publicacao => { %>
-        <tr>
-            <td><%= publicacao.titulo %></td>
-            <td>
-                <a href="/publicacoes/editar/<%= categoria %>/<%= publicacao.id %>">Editar</a>
-                <a href="/publicacoes/excluir/<%= categoria %>/<%= publicacao.id %>">Excluir</a><br />
-            </td>
-        </tr>
-    <% }) %>
-    </tbody>
-</table>
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Publicação</th>
+                <th scope="col">Ações</th>
+            </tr>
+        </thead>
+        <tbody>
+        <% publicacoes.forEach(publicacao => { %>
+            <tr>
+                <td><%= publicacao.titulo %></td>
+                <td>
+                    <a href="/publicacoes/editar/<%= categoria %>/<%= publicacao.id %>">Editar</a>
+                    <a href="/publicacoes/excluir/<%= categoria %>/<%= publicacao.id %>">Excluir</a><br />
+                </td>
+            </tr>
+        <% }) %>
+        </tbody>
+    </table>
+</div>
 
 <%- include('../footer') %>
