--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,9 @@
+    <footer>
+        <div class="container">
+                Copyright &copy 2018&nbsp-&nbsp<a href="https://github.com/WesGtoX" class="mylink-color" target="_blank">Wesley Mendes</a>
+        </div>
+    </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
