--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/public/css/style.css">
     
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/public/favicon.ico" />
+    <link rel="shortcut icon" href="/public/favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="57x57" href="/public/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/public/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/public/favicon/apple-icon-72x72.png">
